--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.0",
     "@reduxjs/toolkit": "^1.9.7",
     "next": "14.0.2",
     "react": "^18",
